2003/07/30 09:21 rwmcfa1

	* GBoxed.xs: bug found by matthias blasing that when getting a legal
	property off off a gobject that had no value assigned would croak with
	a NULL to boxed error.  croak changed to warn and wrapped in a NOISY. 
	returns undef from the null test

2003/07/29 14:52 rwmcfa1

	* GObject.xs: #ifdef'd out the warning when returning undef from 
	gperl_new_object, tree's can rightfully ellicit this, if you're in a
	state of heavy devel on wrappers you might want to re-enable it

2003/07/29 00:58 pcg

	* Subclass.pm: fix typoe.

2003/07/25 10:21 muppetman

	* Glib.pm, README: bump version to 0.91

2003/07/23 23:27 pcg

        * PkgConfig.pm: allow better win32 compatibility (I made a native,
        win32 build of Glib today).

2003/07/18 12:05 muppetman

	* Glib.pm, README, META.yml

2003/07/17 11:44 muppetman

	* GBoxed.xs, GObject.xs, GTypes.xs, Glib.xs, Makefile.PL: add the
	necessary locking to make the perl bindings thread-safe.  thanks go
	to Brett Kosinski for contributing the initial patch and bugging me
	about it, which he needed for work on GStreamer	bindings.

2003/07/10 09:50 muppetman

	* Glib.pm: $VERSION is actually treated as a string, write it as one
	to avoid bootstrap problems when using a locale that writes numbers
	differently.  (thanks to thierry for finding that.)

2003/07/06 16:48 muppetman

	* GSignal.xs: add g_signal_stop_emission_by_name

2003/07/05 06:37 pcg

	* typemap: add gchar_own*, for functions that return allocated
        strings and gchar_length* for functions expecting a length() input.
        * gperl.h: add gchar_own and gchar_len typedefs.

2003/07/04 13:35 muppetman

	* Makefile.PL: patch from Thierry Vignaud fixed my copy and paste
	bug which leads to errors when ExtUtils::Depends isn't present.

	* ChangeLog: bump to 0.26 for release

2003/06/28 03:16 pcg

	* GType.xs: remove superfluous gperl_object_new call.

        * GObject.xs: important bugfix: the calls with own==FALSE in