@@ -1,0 +1,51 @@
+@exports = qw(
+_gperl_call_XS
+gperl_croak_gerror
+gperl_alloc_temp
+gperl_try_convert_enum
+gperl_convert_enum
+gperl_convert_back_enum_pass_unknown
+gperl_convert_back_enum
+gperl_try_convert_flag
+gperl_convert_flag_one
+gperl_convert_flags
+gperl_convert_back_flags
+gperl_set_isa
+gperl_prepend_isa
+gperl_type_from_package
+gperl_package_from_type
+gperl_sv_get_type
+gperl_sv_copy
+gperl_sv_free
+SvGChar
+newSVGChar
+gperl_value_from_sv
+gperl_sv_from_value
+gperl_default_boxed_wrapper_class
+gperl_register_boxed
+gperl_new_boxed
+gperl_new_boxed_copy
+gperl_get_boxed_check
+gperl_boxed_type_from_package
+gperl_boxed_package_from_type
+gperl_register_object
+gperl_register_sink_func
+gperl_object_set_no_warn_unreg_subclass
+gperl_object_package_from_type
+gperl_object_stash_from_type
+gperl_object_type_from_package
+gperl_new_object
+gperl_get_object
+gperl_get_object_check
+gperl_object_check_type
+gperl_signal_connect
+gperl_closure_new
+gperl_callback_new
+gperl_callback_destroy
+gperl_callback_invoke
+newSVGParamSpec
+SvGParamSpec
+newSVGParamFlags
+SvGParamFlags
+);
+1;
