@@ -61,6 +61,9 @@ if ($glib = eval { require ExtUtils::Depends; ExtUtils::Depends->new ('Glib') })
                   'GClosure.xs', 'GSignal.xs', 'GMainLoop.xs', 'GParamSpec.xs');
 }
 
+# exports list needed for win32, unused on others
+require 'Glib.exports';
+
 WriteMakefile(
     NAME		=> 'Glib',
     VERSION_FROM	=> 'Glib.pm', # finds $VERSION
@@ -71,6 +74,8 @@ WriteMakefile(
     ABSTRACT_FROM	=> 'Glib.pm', # retrieve abstract from module
     XSPROTOARG		=> '-noprototypes',
     MAN3PODS		=> $glib ? \%pod_files : {},
+    FUNCLIST		=> \@exports,
+    DL_FUNCS		=> { Glib => [] },
     $glib ? $glib->get_makefile_vars : (),
 );
 
